--- a/src/app/public/pub-home/components/header/header.component.scss
+++ b/src/app/public/pub-home/components/header/header.component.scss
@@ -99,7 +99,7 @@
     &--external {
       display: flex;
       justify-content: flex-end;
-      align-items: flex-end;
+      align-items: center;
 
       & a {
         position: relative;
