--- a/src/app/public/pub-home/components/header-pub/header-pub.component.scss
+++ b/src/app/public/pub-home/components/header-pub/header-pub.component.scss
@@ -52,7 +52,11 @@
         }
 
         &:nth-child(9) {
-          transition: all .2s .9s ease-in-out;
+          transition: all .2s .9s ease-in-out
+        }
+        
+        &:nth-child(10) {
+          transition: all .2s 1s ease-in-out;
           cursor: pointer;
           &.view .link__tabs {
             height: calc(20rem + .66vh);
